add home screen with banck account fragment and transactions fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="bank_sabadell">Banc Sabadell</string>
     <string name="last_transactions">Last transactions</string>
     <string name="general_error">An error occurred</string>
+    <string name="currency_converter">Currency converter</string>
 </resources>
