--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,6 @@
     <string name="dot">.</string>
     <string name="zero_numeric">0</string>
     <string name="delete_symbol">DEL</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="calculator">Calculator</string>
     <string name="finance">Finance</string>
@@ -46,4 +44,19 @@
     <string name="last_transactions">Last transactions</string>
     <string name="general_error">An error occurred</string>
     <string name="currency_converter">Currency converter</string>
+    <string name="interest_calculator">Interest calculator</string>
+    <string name="total_value">Total value</string>
+    <string name="rate">Rate</string>
+    <string name="years">Years</string>
+    <string name="interest">INTEREST: %s</string>
+    <string name="final_value">FINAL VALUE: %s</string>
+    <string name="elevation_symbol">^</string>
+    <string name="app_version_title">App version:</string>
+    <string name="contact_title">Contact</string>
+    <string name="contact_email">albertbecerrahervas@gmail.com</string>
+    <string name="developed_by_title">Developed by:</string>
+    <string name="developer_name">Albert Becerra Hervás</string>
+    <string name="github">Github</string>
+    <string name="github_link">github.com/albertbecervas/Calculator</string>
+    <string name="explanation">App developed for the technical test of:</string>
 </resources>
